--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,5 @@
-<svg fill="none" stroke="black" stroke-width=15 height="500" width="500" stroke-linejoin="round">
-  <polygon class="hex" points="300,150 225,280 75,280 0,150 75,20 225,20"/>
-
-  <polygon class="triangle" points="200,225 75,150 200,75"/>
-  <polygon class="triangle" points="75,20 75,150 200,75"/>
-  <polygon class="triangle" points="200,225 75,150 75,280"/>
-  <polygon class="triangle" points="200,225 300,150 200,75"/>
-
-  <line class="line" x1="225" y1="20" x2="200" y2="75"/>
-  <line class="line" x1="200" y1="225" x2="225" y2="280"/>
-  <line class="line" x1="0" y1="150" x2="75" y2="150"/>
-</svg>
+<h1>
+  <span>RAND</span>
+  <span><img src="assets/images/dice.svg" width="25px"></span>
+  <span>NAME</span>
+</h1>
