--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,7 @@
-<h1>
-  <span>RAND</span>
-  <span><img src="assets/images/dice.svg" width="25px"></span>
-  <span>NAME</span>
-</h1>
+<body>
+  <h1>
+    <span>RAND</span>
+    <span id="titleDice" class="dice"><img src="assets/images/dice.svg" width="24px"></span>
+    <span>NAME</span>
+  </h1>
+</body>
