--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,13 @@
+body {
+
+}
 h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 span {
   padding: 0;
 }
-svg {
-  stroke:"yellow";
+#titleDice {
+  padding-left: 1px;
 }
+
