--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
-<body>
-
-</body>
+<div id="genButtonDiv">
+  <button mat-fab id="genButton" color="black" title="Generate Name">
+    <img src="assets/images/dice.svg" width="24px">
+  </button>
+</div>
