--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-fab {
+  background: linear-gradient(135deg, gold, #FD6A02);
+}
+/* #7B9095, #43464B */
