--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,10 @@
-<div id="genButtonDiv">
-  <button mat-fab id="genButton" color="black" title="Generate Name">
-    <img src="assets/images/dice.svg" width="24px">
-  </button>
+<div id="home-container">
+  <h2>Name</h2>
+
+  <div id="gen-button-div">
+    <button mat-fab id="gen-button" color="black" title="Generate Name">
+      <img src="assets/images/dice.svg" width="24px">
+    </button>
+  </div>
+
 </div>
