--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,7 +7,10 @@ h1 {
 span {
   padding: 0;
 }
-#genButtonDiv {
+#home-container {
+  text-align: center;
+}
+#gen-button-div {
   text-align: center;
 }
 
