--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <div id="home-container">
-  <h2>Name</h2>
+  <h2>{{ name }}</h2>
 
   <div id="gen-button-div">
-    <button mat-fab id="gen-button" color="black" title="Generate Name">
+    <button mat-fab id="gen-button" color="black" title="Generate Name" (click)="this.name = this.nameService.getRandomName()">
       <img src="assets/images/dice.svg" width="24px">
     </button>
   </div>
