--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: "Roboto", "Helvetica Neue", sans-serif; }
 .mat-fab {
-  background: linear-gradient(135deg, gold, #FD6A02);
+  background: linear-gradient(135deg, #ffa700  , #ff4f00  );
 }
 /* #7B9095, #43464B */
