--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div id="home-container">
 
-
+  <div id="nameDiv">
     <h2 class="name">{{ nameService.generatedNames[nameService.nameIndex] | titlecase }}</h2>
-    <hr class="underline"/>
-
+  </div>
+  <hr class=underline>
 
   <div id="gen-button-div">
     <button mat-button  class="prevButton" (click)="this.nameService.goToPreviousName()"><</button>
