--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,18 +6,19 @@
   <hr class=underline>
 
   <div id="gen-button-div">
-    <button mat-button  class="prevButton" (click)="this.nameService.goToPreviousName()">
-      <img class="prevImg" src="assets/images/left.svg"/>
-    </button>
+    <span>
+      <button mat-button  class="prevButton" (click)="this.nameService.goToPreviousName()">
+        <img class="prevImg" src="assets/images/left.svg"/>
+      </button>
 
-    <button mat-fab id="gen-button" color="black" title="Generate Name" (click)="this.name = nameService.generateRandomName()">
-      <img src="assets/images/dice.svg" width="24px">
-    </button>
+      <button mat-fab id="genButton" color="black" title="Generate Name" (click)="this.name = nameService.generateRandomName()">
+        <img src="assets/images/dice.svg" width="24px">
+      </button>
 
-    <button mat-button class="nextButton" (click)="this.nameService.goToNextName()">
-      <img class="nextImg" src="assets/images/right.svg"/>
-    </button>
-
+      <button mat-button class="nextButton" (click)="this.nameService.goToNextName()">
+        <img class="nextImg" src="assets/images/right.svg"/>
+      </button>
+    </span>
   </div>
 
 </div>
