--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -13,13 +13,12 @@ h1 {
   height:70px;
   padding-bottom: 5px;
 }
-
 .name {
-  padding-top: 50px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
+  padding-top: 60px;
+  font-size: 24px;
 }
 .underline {
+  margin-top: 20px;
   width: 150px;
   border: none;
   height: 2px;
